tests/programs/valid/NativeMethodExample.java
public class NativeMethodExample {
    public native static void nativeMethod();
    public NativeMethodExample() {
        
    }
}
