tests/programs/invalid/implicit_this_class_for_static_fields.java
public class implicit_this_class_for_static_fields {
  protected static int x;
  public int m() {
    return x;
  }
}